Implement printer setup and task restructure
- Add .gf-config for printer bed dimensions (225x225mm default)
- Add config module with load/save/ensure_printer_config functions
- Restructure tasks into namespaced collections:
  - invoke_collections/dev.py (lint, format, test, check)
  - invoke_collections/gf.py (bin, baseplate, drawer-fit, config, projects)
  - invoke_collections/helpers.py (shared print/prompt functions)
- Add gf.config command with --init and --show flags
- Add install.sh for one-click project setup
- Update generators.py to use dynamic config values
- Update all tests for new import paths and config mocking
- Minimize root tasks.py to just pp command and namespace loading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,4 +61,4 @@ ignore_missing_imports = true
 [tool.pyrefly]
 project_includes = ["src"]
 python_version = "3.12"
-ignore-missing-imports = ["cqgridfinity", "cqgridfinity.*"]
+ignore-missing-imports = ["cqgridfinity", "cqgridfinity.*", "invoke_collections", "invoke_collections.*"]
